--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+.narbar{
+  background-color: rgb(239, 0, 0);
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  color: white;
+}
+a{
+  text-decoration: none;
+  color: white;
+}
+.links{
+  display: flex;
+  width: 90%;
+}
+.narbar img{
+  width: 30px;
+  height: 30 px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.icono p{
+  padding-right:3px;
 }
+.icono img{
+  padding-left: 2px;
+}
+.home{
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.home img{
+  width: 150px;
+  height: 150px;
+}
+.home p{
+  font-size: x-large;
+}
+.contacto{
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+}
+.contacto h3{
+  font-size: xx-large;
+}
+.contacto p{
+  font-size: larger;
+}
+input{
+  width: 800px;
+}
+.error{
+  text-align: center;
+  padding-top: 100px;
+}
+
